<resources>
    <string name="app_name">Beli Bekas</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="konfirmasiPassword">Konfirmasi Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="tanggalLahir">Tanggal Lahir</string>
    <string name="address">Alamat</string>
    <string name="product_price_format">Rp. %s</string>
    <string name="tvOnBoarding1">Selamat datang di Belibekas! Temukan keberlanjutan dalam setiap pembelian. Mari bersama wujudkan perubahan positif menuju SDGs.</string>
    <string name="tvOnBoarding2">Explore Belibekas: Platform belanja yang menginspirasi, berkualitas, dan berdampak positif. Temukan barang bekas unik untuk gaya hidup berkelanjutan.</string>
    <string name="tvOnBoarding3">Belibekas: Kini lebih dari sekadar belanja. Setiap transaksi di sini adalah langkah kecil untuk lingkungan yang lebih baik. Selamat datang di perjalanan berkelanjutan!</string>
    <string name="Skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="abc_open_drawer_description">Open navigation drawer</string>
    <string name="abc_close_drawer_description">Close navigation drawer</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="baju">Baju</string>
    <string name="celana">Celana</string>
    <string name="aksesoris">Aksesoris</string>

    <string name="handphone">Handphone</string>
    <string name="laptop">Laptop</string>
    <string name="komputer">Komputer</string>

    <string name="buku">Buku</string>
    <string name="gaming">Gaming</string>
    <string name="mainan">Mainan</string>

    <string name="pakaian">Pakaian</string>
    <string name="elektronik">Elektronik</string>
    <string name="hobi">Hobby</string>
    <string name="kebutuhan">Kebutuhan</string>

    <string name="dapur">Dapur</string>
    <string name="office">Office</string>
    <string name="properti">Properti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>

</resources>