<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="App Logo"
            android:src="@drawable/tablet_login_amicoo" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImageView"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textRegister"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="13dp" />

        <EditText
            android:id="@+id/editTextRegisterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterEmail"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="13dp" />

        <EditText
            android:id="@+id/editTextRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterAddress"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:autofillHints="name"
            android:background="@drawable/edittext_background"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="13dp" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterUsername"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="13dp" />

        <EditText
            android:id="@+id/editTextRegisterKonfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterPassword"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/konfirmasiPassword"
            android:inputType="textPassword"
            android:padding="13dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextRegisterKonfirmasiPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onRegisterClick"
            android:text="Register"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:onClick="panggilActivityLogin"
            android:text="Sudah punya akun? Login di sini."
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</ScrollView>